# desitemplate

./: .readthedocs.yml  .travis.yml  LICENSE.rst  Makefile  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  template.module
.github/workflows/: python-package.yml
doc/: changes.rst  conf.py  hello.rst  index.dox  index.rst
doc/template/: index.rst
etc/: template.module  travis_env_common.sh
py/desiTemplate/: __init__.py
py/desitemplate/: __init__.py  _version.py  main.py
py/desitemplate/test/: __init__.py  desitemplate_test_suite.py  test_main.py  test_top_level.py
py/template/: __init__.py  main.py
src/: Makefile  compare_version.cpp  get_svn_devstr.cpp  main.cpp  most_recent_tag.cpp  parse_version.cpp  template.hpp  version.cpp
